--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -147,11 +147,43 @@
     "features": "सुविधाएँ",
     "pricing": "मूल्य",
     "faq": "FAQ",
+    "terms": "शर्तें",
+    "privacy": "गोपनीयता",
     "copyright": "© {{year}} Voca. सर्वाधिकार सुरक्षित।"
   },
   "notFound": {
     "title": "404",
     "message": "यह पेज मौजूद नहीं है। शायद इसे गलत ट्रांसक्राइब किया गया।",
     "backHome": "होम पर वापस"
+  },
+  "terms": {
+    "title": "सेवा की शर्तें",
+    "lastUpdated": "अंतिम अपडेट: 26 फरवरी 2026",
+    "agreement": { "heading": "1. शर्तों की स्वीकृति", "content": "Voca (\"सेवा\") को डाउनलोड, इंस्टॉल या उपयोग करके, आप इन सेवा की शर्तों से सहमत होते हैं। यदि आप सहमत नहीं हैं, तो सेवा का उपयोग न करें। Voca का संचालन Emircan Sahin (\"हम\", \"हमारा\") द्वारा किया जाता है।" },
+    "service": { "heading": "2. सेवा का विवरण", "content": "Voca macOS और Windows के लिए एक डेस्कटॉप एप्लिकेशन है जो भाषण को टेक्स्ट में बदलता है, वैकल्पिक रूप से अनुवाद करता है और परिणाम को आपके कर्सर की स्थिति में पेस्ट करता है।" },
+    "accounts": { "heading": "3. खाते", "content": "सेवा का उपयोग करने के लिए आपको Google खाते से साइन इन करना होगा। आप अपने खाते की सुरक्षा बनाए रखने के लिए जिम्मेदार हैं और अपने क्रेडेंशियल साझा नहीं करने चाहिए या दूसरों को एक्सेस करने की अनुमति नहीं देनी चाहिए।" },
+    "billing": { "heading": "4. सदस्यता और बिलिंग", "items": ["Voca दो सशुल्क योजनाएँ प्रदान करता है: <b>Pro ($3/माह)</b> और <b>Max ($10/माह)</b>। दोनों योजनाओं में सभी सुविधाएँ शामिल हैं।", "प्रत्येक योजना में उपयोग के आधार पर खपत होने वाले मासिक क्रेडिट शामिल हैं।", "सभी योजनाओं में <b>3 दिन की मुफ्त ट्रायल</b> शामिल है। ट्रायल अवधि के दौरान आपसे शुल्क नहीं लिया जाएगा।", "भुगतान हमारे रजिस्टर्ड मर्चेंट <b>Paddle</b> द्वारा प्रोसेस किए जाते हैं। Paddle बिलिंग, कर और रिफंड का प्रबंधन करता है। सदस्यता लेकर, आप <paddleTerms>Paddle की शर्तों</paddleTerms> से भी सहमत होते हैं।", "सदस्यताएँ स्वचालित रूप से नवीनीकृत होती हैं। आप कभी भी रद्द कर सकते हैं — आपका एक्सेस वर्तमान बिलिंग अवधि के अंत तक जारी रहता है।", "अप्रयुक्त क्रेडिट अगली बिलिंग अवधि में स्थानांतरित नहीं होते।"] },
+    "use": { "heading": "5. स्वीकार्य उपयोग", "intro": "आप निम्नलिखित न करने पर सहमत हैं:", "items": ["किसी भी गैरकानूनी उद्देश्य के लिए सेवा का उपयोग करना।", "सेवा को रिवर्स-इंजीनियर, शोषण या बाधित करने का प्रयास करना।", "दूसरों के बौद्धिक संपदा अधिकारों का उल्लंघन करने वाली सामग्री अपलोड करना।", "अपने खाते का एक्सेस साझा करना, पुनर्विक्रय करना या पुनर्वितरित करना।"] },
+    "ip": { "heading": "6. बौद्धिक संपदा", "content": "Voca <b>MIT लाइसेंस</b> के तहत जारी किया गया ओपन-सोर्स सॉफ्टवेयर है। आप सेवा का उपयोग करके बनाई गई सभी सामग्री के स्वामी बने रहते हैं, जिसमें आपके ट्रांसक्रिप्ट और अनुवाद शामिल हैं।" },
+    "warranties": { "heading": "7. वारंटी का अस्वीकरण", "content": "सेवा बिना किसी वारंटी के \"जैसी है\" और \"उपलब्ध है\" के आधार पर प्रदान की जाती है। हम ट्रांसक्रिप्शन या अनुवाद की सटीकता की गारंटी नहीं देते।" },
+    "liability": { "heading": "8. दायित्व की सीमा", "content": "कानून द्वारा अनुमत अधिकतम सीमा तक, हम सेवा के उपयोग से उत्पन्न किसी भी अप्रत्यक्ष, आकस्मिक, विशेष, परिणामी या दंडात्मक क्षति के लिए उत्तरदायी नहीं होंगे।" },
+    "termination": { "heading": "9. समाप्ति", "content": "इन शर्तों के उल्लंघन के लिए हम आपके एक्सेस को निलंबित या समाप्त कर सकते हैं। आप कभी भी सेवा का उपयोग बंद कर सकते हैं और अपनी सदस्यता रद्द कर सकते हैं।" },
+    "changes": { "heading": "10. शर्तों में परिवर्तन", "content": "हम समय-समय पर इन शर्तों को अपडेट कर सकते हैं। परिवर्तनों के बाद सेवा का निरंतर उपयोग अपडेटेड शर्तों की स्वीकृति माना जाएगा।" },
+    "contact": { "heading": "11. संपर्क", "content": "इन शर्तों के बारे में प्रश्न हों तो <email>contact@usevoca.dev</email> पर हमसे संपर्क करें।" }
+  },
+  "privacy": {
+    "title": "गोपनीयता नीति",
+    "lastUpdated": "अंतिम अपडेट: 26 फरवरी 2026",
+    "intro": { "heading": "1. परिचय", "content": "यह गोपनीयता नीति बताती है कि Emircan Sahin (\"हम\", \"हमारा\") द्वारा संचालित Voca (\"सेवा\") आपकी जानकारी को कैसे एकत्र, उपयोग और सुरक्षित करता है।" },
+    "collection": { "heading": "2. हम क्या जानकारी एकत्र करते हैं", "account": "<b>खाता जानकारी:</b> Google से साइन इन करते समय, हम आपका नाम, ईमेल पता और प्रोफाइल फोटो प्राप्त करते हैं। इसका उपयोग केवल प्रमाणीकरण के लिए किया जाता है।", "transcripts": "<b>ट्रांसक्रिप्ट:</b> आपके लिखित टेक्स्ट और अनुवाद ऐप में एक्सेस करने के लिए संग्रहीत किए जाते हैं।", "billing": "<b>बिलिंग जानकारी:</b> भुगतान विवरण पूरी तरह से हमारे रजिस्टर्ड मर्चेंट <b>Paddle</b> द्वारा एकत्र और प्रोसेस किए जाते हैं। हम आपके भुगतान कार्ड की जानकारी संग्रहीत नहीं करते या उस तक पहुँच नहीं रखते।" },
+    "audio": { "heading": "3. ऑडियो डेटा", "items": ["ऑडियो फाइलें ट्रांसक्रिप्शन के बाद <b>तुरंत हटा दी जाती हैं</b>। हम प्रोसेसिंग के बाद कभी भी रिकॉर्डिंग संग्रहीत नहीं करते।", "ऑडियो ट्रांसक्रिप्शन के लिए स्पीच-टू-टेक्स्ट प्रदाताओं को भेजा जाता है। हम कोई कॉपी नहीं रखते।"] },
+    "privacyMode": { "heading": "4. गोपनीयता मोड", "content": "Voca सेटिंग्स में एक वैकल्पिक गोपनीयता मोड प्रदान करता है। सक्रिय होने पर, केवल सबसे हाल का ट्रांसक्रिप्ट रखा जाता है — हर नया ट्रांसक्रिप्शन पिछले को हटा देता है। इसे सक्रिय करने से सभी मौजूदा ट्रांसक्रिप्ट भी हट जाते हैं।" },
+    "thirdParty": { "heading": "5. तृतीय-पक्ष सेवाएँ", "intro": "हम मुख्य कार्यक्षमता प्रदान करने के लिए तृतीय-पक्ष सेवाओं का उपयोग करते हैं। आपके डेटा को इन प्रदाताओं द्वारा उनकी अपनी गोपनीयता नीतियों के अनुसार प्रोसेस किया जा सकता है:", "paddle": "<b>Paddle</b> — भुगतान प्रोसेसिंग। <paddlePrivacy>गोपनीयता नीति</paddlePrivacy>", "google": "<b>Google</b> — प्रमाणीकरण और अनुवाद। <googlePrivacy>गोपनीयता नीति</googlePrivacy>" },
+    "noCollect": { "heading": "6. हम क्या एकत्र नहीं करते", "items": ["कोई एनालिटिक्स या ट्रैकिंग नहीं।", "कोई विज्ञापन पहचानकर्ता नहीं।", "मार्केटिंग उद्देश्यों के लिए आपके डेटा की कोई बिक्री या साझाकरण नहीं।"] },
+    "retention": { "heading": "7. डेटा प्रतिधारण", "items": ["<b>ऑडियो:</b> प्रोसेसिंग के तुरंत बाद हटा दिया जाता है।", "<b>ट्रांसक्रिप्ट:</b> जब तक आप उन्हें हटाते नहीं या गोपनीयता मोड उन्हें हटा नहीं देता, तब तक संग्रहीत रहते हैं।", "<b>खाता:</b> सक्रिय रहने तक बनाए रखा जाता है। हटाने का अनुरोध करने के लिए हमसे संपर्क करें।"] },
+    "rights": { "heading": "8. आपके अधिकार", "intro": "आपको निम्नलिखित अधिकार हैं:", "items": ["ऐप के माध्यम से अपने डेटा तक पहुँचना।", "अपने ट्रांसक्रिप्ट को व्यक्तिगत रूप से या गोपनीयता मोड के माध्यम से हटाना।", "हमसे संपर्क करके अपने खाते के पूर्ण विलोपन का अनुरोध करना।", "कभी भी अपनी सदस्यता रद्द करना।"] },
+    "children": { "heading": "9. बच्चों की गोपनीयता", "content": "सेवा 13 वर्ष से कम उम्र के बच्चों के लिए नहीं है। हम जानबूझकर बच्चों से व्यक्तिगत जानकारी एकत्र नहीं करते।" },
+    "changes": { "heading": "10. इस नीति में परिवर्तन", "content": "हम समय-समय पर इस गोपनीयता नीति को अपडेट कर सकते हैं। परिवर्तनों के बाद सेवा का निरंतर उपयोग अपडेटेड नीति की स्वीकृति माना जाएगा।" },
+    "contact": { "heading": "11. संपर्क", "content": "इस गोपनीयता नीति के बारे में प्रश्न हों तो <email>contact@usevoca.dev</email> पर हमसे संपर्क करें।" }
   }
 }
