--- a/packages/web/src/i18n/locales/ja.json
+++ b/packages/web/src/i18n/locales/ja.json
@@ -147,11 +147,43 @@
     "features": "機能",
     "pricing": "料金",
     "faq": "FAQ",
+    "terms": "利用規約",
+    "privacy": "プライバシー",
     "copyright": "© {{year}} Voca. All rights reserved."
   },
   "notFound": {
     "title": "404",
     "message": "このページは存在しません。文字起こしが間違っていたのかもしれません。",
     "backHome": "ホームに戻る"
+  },
+  "terms": {
+    "title": "利用規約",
+    "lastUpdated": "最終更新日：2026年2月26日",
+    "agreement": { "heading": "1. 規約への同意", "content": "Voca（「サービス」）をダウンロード、インストール、または使用することにより、本利用規約に同意したものとみなされます。同意しない場合は、サービスを使用しないでください。VocaはEmircan Sahin（「当社」）により運営されています。" },
+    "service": { "heading": "2. サービスの説明", "content": "VocaはmacOSおよびWindows用のデスクトップアプリケーションで、音声をテキストに変換し、オプションで翻訳し、カーソル位置に結果を貼り付けます。" },
+    "accounts": { "heading": "3. アカウント", "content": "サービスを利用するにはGoogleアカウントでサインインする必要があります。アカウントのセキュリティを維持する責任はお客様にあり、認証情報を共有したり、他者にアクセスを許可したりしてはなりません。" },
+    "billing": { "heading": "4. サブスクリプションと請求", "items": ["Vocaは2つの有料プランを提供しています：<b>Pro（$3/月）</b>と<b>Max（$10/月）</b>。どちらのプランも全機能を含みます。", "各プランには使用量に応じて消費される月間クレジットが含まれます。", "すべてのプランに<b>3日間の無料トライアル</b>が含まれます。トライアル期間中は課金されません。", "お支払いは当社の販売代理店である<b>Paddle</b>が処理します。Paddleが請求、税金、払い戻しを管理します。サブスクリプションにより、<paddleTerms>Paddleの利用規約</paddleTerms>にも同意したものとみなされます。", "サブスクリプションは自動更新されます。いつでもキャンセルできます — 現在の請求期間の終了までアクセスが継続します。", "未使用のクレジットは次の請求期間に繰り越されません。"] },
+    "use": { "heading": "5. 許容される使用", "intro": "以下の行為を行わないことに同意します：", "items": ["違法な目的でサービスを使用すること。", "サービスのリバースエンジニアリング、悪用、または妨害を試みること。", "他者の知的財産権を侵害するコンテンツをアップロードすること。", "アカウントアクセスを共有、転売、または再配布すること。"] },
+    "ip": { "heading": "6. 知的財産", "content": "Vocaは<b>MITライセンス</b>の下でリリースされたオープンソースソフトウェアです。トランスクリプトや翻訳を含め、サービスを使用して作成したすべてのコンテンツの所有権はお客様に帰属します。" },
+    "warranties": { "heading": "7. 保証の免責", "content": "サービスは明示または黙示を問わず、いかなる種類の保証もなく「現状のまま」提供されます。トランスクリプションまたは翻訳の正確性を保証するものではありません。" },
+    "liability": { "heading": "8. 責任の制限", "content": "法律で許容される最大限の範囲において、サービスの使用から生じる間接的、付随的、特別、結果的、または懲罰的損害について、当社は責任を負いません。" },
+    "termination": { "heading": "9. 終了", "content": "本規約への違反によりアクセスを停止または終了する場合があります。いつでもサービスの使用を中止し、サブスクリプションをキャンセルできます。" },
+    "changes": { "heading": "10. 規約の変更", "content": "本規約は随時更新される場合があります。変更後もサービスを継続して使用することは、更新された規約への同意を意味します。" },
+    "contact": { "heading": "11. お問い合わせ", "content": "本規約についてご質問がある場合は、<email>contact@usevoca.dev</email>までお問い合わせください。" }
+  },
+  "privacy": {
+    "title": "プライバシーポリシー",
+    "lastUpdated": "最終更新日：2026年2月26日",
+    "intro": { "heading": "1. はじめに", "content": "本プライバシーポリシーは、Emircan Sahin（「当社」）が運営するVoca（「サービス」）がお客様の情報をどのように収集、使用、保護するかを説明します。" },
+    "collection": { "heading": "2. 収集する情報", "account": "<b>アカウント情報：</b>Googleでサインインすると、お名前、メールアドレス、プロフィール写真を受け取ります。これは認証のみに使用されます。", "transcripts": "<b>トランスクリプト：</b>文字起こしテキストと翻訳は、アプリ内でアクセスできるように保存されます。", "billing": "<b>請求情報：</b>お支払い情報は、当社の販売代理店である<b>Paddle</b>が完全に収集・処理します。当社はお客様のカード情報を保存せず、アクセスもしません。" },
+    "audio": { "heading": "3. 音声データ", "items": ["音声ファイルは文字起こし後<b>直ちに削除</b>されます。処理時間を超えて録音を保存することはありません。", "音声は文字起こしのために音声テキスト変換プロバイダーに送信されます。コピーは一切保持しません。"] },
+    "privacyMode": { "heading": "4. プライバシーモード", "content": "Vocaは設定でオプションのプライバシーモードを提供しています。有効にすると、最新のトランスクリプトのみが保持されます — 新しい文字起こしごとに前のものが削除されます。有効化すると既存のすべてのトランスクリプトも削除されます。" },
+    "thirdParty": { "heading": "5. サードパーティサービス", "intro": "コア機能を提供するためにサードパーティサービスを使用しています。お客様のデータは、これらのプロバイダーの独自のプライバシーポリシーに従って処理される場合があります：", "paddle": "<b>Paddle</b> — 決済処理。<paddlePrivacy>プライバシーポリシー</paddlePrivacy>", "google": "<b>Google</b> — 認証と翻訳。<googlePrivacy>プライバシーポリシー</googlePrivacy>" },
+    "noCollect": { "heading": "6. 収集しないもの", "items": ["アナリティクスやトラッキングなし。", "広告識別子なし。", "マーケティング目的でのデータの販売や共有なし。"] },
+    "retention": { "heading": "7. データ保持", "items": ["<b>音声：</b>処理後直ちに削除。", "<b>トランスクリプト：</b>削除するまで、またはプライバシーモードが削除するまで保存。", "<b>アカウント：</b>アクティブな間保持。削除のリクエストはお問い合わせください。"] },
+    "rights": { "heading": "8. お客様の権利", "intro": "以下の権利があります：", "items": ["アプリを通じてデータにアクセスする。", "トランスクリプトを個別に、またはプライバシーモードで削除する。", "お問い合わせによりアカウントの完全な削除を要求する。", "いつでもサブスクリプションをキャンセルする。"] },
+    "children": { "heading": "9. お子様のプライバシー", "content": "サービスは13歳未満のお子様を対象としていません。お子様から意図的に個人情報を収集することはありません。" },
+    "changes": { "heading": "10. ポリシーの変更", "content": "本プライバシーポリシーは随時更新される場合があります。変更後もサービスを継続して使用することは、更新されたポリシーへの同意を意味します。" },
+    "contact": { "heading": "11. お問い合わせ", "content": "本プライバシーポリシーについてご質問がある場合は、<email>contact@usevoca.dev</email>までお問い合わせください。" }
   }
 }
