--- a/packages/web/src/i18n/locales/ru.json
+++ b/packages/web/src/i18n/locales/ru.json
@@ -147,11 +147,43 @@
     "features": "Функции",
     "pricing": "Цены",
     "faq": "FAQ",
+    "terms": "Условия",
+    "privacy": "Конфиденциальность",
     "copyright": "© {{year}} Voca. Все права защищены."
   },
   "notFound": {
     "title": "404",
     "message": "Эта страница не существует. Возможно, она была неправильно транскрибирована.",
     "backHome": "На главную"
+  },
+  "terms": {
+    "title": "Условия использования",
+    "lastUpdated": "Последнее обновление: 26 февраля 2026",
+    "agreement": { "heading": "1. Принятие условий", "content": "Загружая, устанавливая или используя Voca (\"Сервис\"), вы соглашаетесь с настоящими Условиями использования. Если вы не согласны, не используйте Сервис. Voca управляется Emircan Sahin (\"мы\", \"наш\")." },
+    "service": { "heading": "2. Описание Сервиса", "content": "Voca — это настольное приложение для macOS и Windows, которое преобразует речь в текст, при необходимости переводит его и вставляет результат в позицию курсора." },
+    "accounts": { "heading": "3. Учётные записи", "content": "Для использования Сервиса необходимо войти с учётной записью Google. Вы несёте ответственность за безопасность своей учётной записи и не должны передавать свои учётные данные или предоставлять доступ другим лицам." },
+    "billing": { "heading": "4. Подписки и оплата", "items": ["Voca предлагает два платных плана: <b>Pro ($3/мес)</b> и <b>Max ($10/мес)</b>. Оба плана включают все функции.", "Каждый план включает ежемесячные кредиты, которые расходуются в зависимости от использования.", "Все планы включают <b>3-дневный бесплатный пробный период</b>. Во время пробного периода плата не взимается.", "Платежи обрабатываются компанией <b>Paddle</b>, нашим зарегистрированным торговцем. Paddle управляет выставлением счетов, налогами и возвратами. Оформляя подписку, вы также соглашаетесь с <paddleTerms>Условиями Paddle</paddleTerms>.", "Подписки продлеваются автоматически. Вы можете отменить в любое время — доступ сохраняется до конца текущего расчётного периода.", "Неиспользованные кредиты не переносятся на следующий расчётный период."] },
+    "use": { "heading": "5. Допустимое использование", "intro": "Вы обязуетесь не:", "items": ["Использовать Сервис в незаконных целях.", "Пытаться декомпилировать, эксплуатировать или нарушать работу Сервиса.", "Загружать контент, нарушающий права интеллектуальной собственности третьих лиц.", "Передавать, перепродавать или распространять доступ к своей учётной записи."] },
+    "ip": { "heading": "6. Интеллектуальная собственность", "content": "Voca — это программное обеспечение с открытым исходным кодом, выпущенное под <b>лицензией MIT</b>. Вы сохраняете право собственности на весь контент, созданный с помощью Сервиса, включая ваши транскрипции и переводы." },
+    "warranties": { "heading": "7. Отказ от гарантий", "content": "Сервис предоставляется «как есть» и «по мере доступности» без каких-либо гарантий, явных или подразумеваемых. Мы не гарантируем точность транскрипций или переводов." },
+    "liability": { "heading": "8. Ограничение ответственности", "content": "В максимальной степени, допускаемой законом, мы не несём ответственности за косвенные, случайные, особые, последующие или штрафные убытки, возникающие в связи с использованием Сервиса." },
+    "termination": { "heading": "9. Прекращение", "content": "Мы можем приостановить или прекратить ваш доступ за нарушение настоящих Условий. Вы можете прекратить использование Сервиса и отменить подписку в любое время." },
+    "changes": { "heading": "10. Изменения условий", "content": "Мы можем время от времени обновлять настоящие Условия. Продолжение использования Сервиса после изменений означает принятие обновлённых Условий." },
+    "contact": { "heading": "11. Контакты", "content": "Если у вас есть вопросы по настоящим Условиям, свяжитесь с нами по адресу <email>contact@usevoca.dev</email>." }
+  },
+  "privacy": {
+    "title": "Политика конфиденциальности",
+    "lastUpdated": "Последнее обновление: 26 февраля 2026",
+    "intro": { "heading": "1. Введение", "content": "Настоящая Политика конфиденциальности объясняет, как Voca (\"Сервис\"), управляемый Emircan Sahin (\"мы\", \"наш\"), собирает, использует и защищает вашу информацию." },
+    "collection": { "heading": "2. Собираемая информация", "account": "<b>Информация об учётной записи:</b> При входе через Google мы получаем ваше имя, адрес электронной почты и фото профиля. Используется исключительно для аутентификации.", "transcripts": "<b>Транскрипции:</b> Ваши расшифрованные тексты и переводы хранятся для доступа в приложении.", "billing": "<b>Платёжная информация:</b> Данные об оплате собираются и обрабатываются исключительно компанией <b>Paddle</b>, нашим зарегистрированным торговцем. Мы не храним и не имеем доступа к данным вашей платёжной карты." },
+    "audio": { "heading": "3. Аудиоданные", "items": ["Аудиофайлы <b>удаляются немедленно</b> после транскрипции. Мы никогда не храним записи дольше времени обработки.", "Аудио отправляется провайдерам распознавания речи для транскрипции. Мы не сохраняем никаких копий."] },
+    "privacyMode": { "heading": "4. Режим конфиденциальности", "content": "Voca предлагает опциональный Режим конфиденциальности в Настройках. При включении сохраняется только последняя транскрипция — каждая новая транскрипция удаляет предыдущую. Включение также удаляет все существующие транскрипции." },
+    "thirdParty": { "heading": "5. Сторонние сервисы", "intro": "Мы используем сторонние сервисы для обеспечения основной функциональности. Ваши данные могут обрабатываться этими провайдерами в соответствии с их собственными политиками конфиденциальности:", "paddle": "<b>Paddle</b> — Обработка платежей. <paddlePrivacy>Политика конфиденциальности</paddlePrivacy>", "google": "<b>Google</b> — Аутентификация и перевод. <googlePrivacy>Политика конфиденциальности</googlePrivacy>" },
+    "noCollect": { "heading": "6. Что мы НЕ собираем", "items": ["Никакой аналитики или отслеживания.", "Никаких рекламных идентификаторов.", "Никакой продажи или передачи ваших данных в маркетинговых целях."] },
+    "retention": { "heading": "7. Хранение данных", "items": ["<b>Аудио:</b> Удаляется немедленно после обработки.", "<b>Транскрипции:</b> Хранятся до удаления вами или автоматического удаления Режимом конфиденциальности.", "<b>Учётная запись:</b> Сохраняется, пока активна. Свяжитесь с нами для запроса удаления."] },
+    "rights": { "heading": "8. Ваши права", "intro": "Вы имеете право:", "items": ["Получать доступ к своим данным через приложение.", "Удалять свои транскрипции по отдельности или через Режим конфиденциальности.", "Запросить полное удаление учётной записи, связавшись с нами.", "Отменить подписку в любое время."] },
+    "children": { "heading": "9. Конфиденциальность детей", "content": "Сервис не предназначен для детей младше 13 лет. Мы сознательно не собираем личную информацию от детей." },
+    "changes": { "heading": "10. Изменения политики", "content": "Мы можем время от времени обновлять настоящую Политику конфиденциальности. Продолжение использования Сервиса после изменений означает принятие обновлённой политики." },
+    "contact": { "heading": "11. Контакты", "content": "Если у вас есть вопросы по настоящей Политике конфиденциальности, свяжитесь с нами по адресу <email>contact@usevoca.dev</email>." }
   }
 }
