--- a/packages/web/src/i18n/locales/zh.json
+++ b/packages/web/src/i18n/locales/zh.json
@@ -147,11 +147,43 @@
     "features": "功能",
     "pricing": "价格",
     "faq": "常见问题",
+    "terms": "条款",
+    "privacy": "隐私",
     "copyright": "© {{year}} Voca. 保留所有权利。"
   },
   "notFound": {
     "title": "404",
     "message": "此页面不存在。也许是转录错了。",
     "backHome": "返回首页"
+  },
+  "terms": {
+    "title": "服务条款",
+    "lastUpdated": "最后更新：2026年2月26日",
+    "agreement": { "heading": "1. 条款同意", "content": "通过下载、安装或使用 Voca（\"服务\"），您同意本服务条款。如不同意，请勿使用本服务。Voca 由 Emircan Sahin（\"我们\"）运营。" },
+    "service": { "heading": "2. 服务描述", "content": "Voca 是一款适用于 macOS 和 Windows 的桌面应用程序，可将语音转换为文字，选择性翻译，并将结果粘贴到光标位置。" },
+    "accounts": { "heading": "3. 账户", "content": "您必须使用 Google 账户登录才能使用本服务。您有责任维护账户安全，不得分享您的凭据或允许他人访问。" },
+    "billing": { "heading": "4. 订阅与计费", "items": ["Voca 提供两种付费计划：<b>Pro（$3/月）</b>和<b>Max（$10/月）</b>。两种计划均包含所有功能。", "每个计划包含按使用量消耗的月度积分。", "所有计划均包含<b>3天免费试用</b>。试用期间不会收费。", "付款由我们的注册商户<b>Paddle</b>处理。Paddle 管理计费、税务和退款。订阅即表示您同意 <paddleTerms>Paddle 的条款</paddleTerms>。", "订阅自动续费。您可以随时取消 — 访问权限持续到当前计费周期结束。", "未使用的积分不会转入下一个计费周期。"] },
+    "use": { "heading": "5. 可接受的使用", "intro": "您同意不会：", "items": ["将服务用于任何非法目的。", "试图对服务进行逆向工程、利用或破坏。", "上传侵犯他人知识产权的内容。", "共享、转售或重新分发您的账户访问权限。"] },
+    "ip": { "heading": "6. 知识产权", "content": "Voca 是根据<b>MIT 许可证</b>发布的开源软件。您保留使用本服务创建的所有内容的所有权，包括您的转录和翻译。" },
+    "warranties": { "heading": "7. 免责声明", "content": "服务按\"原样\"和\"可用\"基础提供，不提供任何明示或暗示的保证。我们不保证转录或翻译的准确性。" },
+    "liability": { "heading": "8. 责任限制", "content": "在法律允许的最大范围内，我们不对因使用本服务而产生的任何间接、附带、特殊、后果性或惩罚性损害承担责任。" },
+    "termination": { "heading": "9. 终止", "content": "如违反本条款，我们可能暂停或终止您的访问权限。您可以随时停止使用服务并取消订阅。" },
+    "changes": { "heading": "10. 条款变更", "content": "我们可能会不时更新本条款。变更后继续使用服务即表示接受更新后的条款。" },
+    "contact": { "heading": "11. 联系方式", "content": "如对本条款有疑问，请通过 <email>contact@usevoca.dev</email> 联系我们。" }
+  },
+  "privacy": {
+    "title": "隐私政策",
+    "lastUpdated": "最后更新：2026年2月26日",
+    "intro": { "heading": "1. 简介", "content": "本隐私政策说明 Voca（\"服务\"）如何收集、使用和保护您的信息，由 Emircan Sahin（\"我们\"）运营。" },
+    "collection": { "heading": "2. 我们收集的信息", "account": "<b>账户信息：</b>使用 Google 登录时，我们会收到您的姓名、电子邮件地址和个人头像。仅用于身份验证。", "transcripts": "<b>转录内容：</b>您的转录文本和翻译会被存储，以便您在应用中访问。", "billing": "<b>账单信息：</b>付款详情完全由我们的注册商户<b>Paddle</b>收集和处理。我们不存储也无法访问您的支付卡信息。" },
+    "audio": { "heading": "3. 音频数据", "items": ["音频文件在转录后<b>立即删除</b>。我们绝不会在处理时间之外存储录音。", "音频被发送给语音转文字提供商进行转录。我们不保留任何副本。"] },
+    "privacyMode": { "heading": "4. 隐私模式", "content": "Voca 在设置中提供可选的隐私模式。启用后，仅保留最新的转录 — 每次新转录会删除前一个。启用还会删除所有现有转录。" },
+    "thirdParty": { "heading": "5. 第三方服务", "intro": "我们使用第三方服务提供核心功能。您的数据可能会按照这些提供商各自的隐私政策进行处理：", "paddle": "<b>Paddle</b> — 支付处理。<paddlePrivacy>隐私政策</paddlePrivacy>", "google": "<b>Google</b> — 身份验证和翻译。<googlePrivacy>隐私政策</googlePrivacy>" },
+    "noCollect": { "heading": "6. 我们不收集的内容", "items": ["无分析或追踪。", "无广告标识符。", "不出售或分享您的数据用于营销目的。"] },
+    "retention": { "heading": "7. 数据保留", "items": ["<b>音频：</b>处理后立即删除。", "<b>转录内容：</b>存储直到您删除或隐私模式移除。", "<b>账户：</b>活跃期间保留。联系我们申请删除。"] },
+    "rights": { "heading": "8. 您的权利", "intro": "您有权：", "items": ["通过应用访问您的数据。", "单独或通过隐私模式删除您的转录。", "通过联系我们请求完全删除您的账户。", "随时取消订阅。"] },
+    "children": { "heading": "9. 儿童隐私", "content": "本服务不面向13岁以下的儿童。我们不会故意收集儿童的个人信息。" },
+    "changes": { "heading": "10. 政策变更", "content": "我们可能会不时更新本隐私政策。变更后继续使用服务即表示接受更新后的政策。" },
+    "contact": { "heading": "11. 联系方式", "content": "如对本隐私政策有疑问，请通过 <email>contact@usevoca.dev</email> 联系我们。" }
   }
 }
