--- a/packages/web/src/i18n/locales/ko.json
+++ b/packages/web/src/i18n/locales/ko.json
@@ -147,11 +147,43 @@
     "features": "기능",
     "pricing": "요금",
     "faq": "FAQ",
+    "terms": "이용약관",
+    "privacy": "개인정보",
     "copyright": "© {{year}} Voca. All rights reserved."
   },
   "notFound": {
     "title": "404",
     "message": "이 페이지는 존재하지 않습니다. 아마 잘못 받아쓰기된 것 같습니다.",
     "backHome": "홈으로 돌아가기"
+  },
+  "terms": {
+    "title": "이용약관",
+    "lastUpdated": "최종 업데이트: 2026년 2월 26일",
+    "agreement": { "heading": "1. 약관 동의", "content": "Voca(\"서비스\")를 다운로드, 설치 또는 사용함으로써 본 이용약관에 동의하게 됩니다. 동의하지 않는 경우 서비스를 사용하지 마십시오. Voca는 Emircan Sahin(\"당사\")이 운영합니다." },
+    "service": { "heading": "2. 서비스 설명", "content": "Voca는 macOS 및 Windows용 데스크톱 애플리케이션으로, 음성을 텍스트로 변환하고 선택적으로 번역하며 커서 위치에 결과를 붙여넣습니다." },
+    "accounts": { "heading": "3. 계정", "content": "서비스를 이용하려면 Google 계정으로 로그인해야 합니다. 계정 보안을 유지할 책임은 사용자에게 있으며, 자격 증명을 공유하거나 타인의 접근을 허용해서는 안 됩니다." },
+    "billing": { "heading": "4. 구독 및 결제", "items": ["Voca는 두 가지 유료 플랜을 제공합니다: <b>Pro($3/월)</b> 및 <b>Max($10/월)</b>. 두 플랜 모두 모든 기능을 포함합니다.", "각 플랜에는 사용량에 따라 소모되는 월간 크레딧이 포함됩니다.", "모든 플랜에는 <b>3일 무료 체험</b>이 포함됩니다. 체험 기간 동안 요금이 부과되지 않습니다.", "결제는 당사의 공식 판매자인 <b>Paddle</b>이 처리합니다. Paddle이 청구, 세금 및 환불을 관리합니다. 구독 시 <paddleTerms>Paddle의 이용약관</paddleTerms>에도 동의하게 됩니다.", "구독은 자동으로 갱신됩니다. 언제든지 취소할 수 있습니다 — 현재 결제 기간이 끝날 때까지 액세스가 유지됩니다.", "미사용 크레딧은 다음 결제 기간으로 이월되지 않습니다."] },
+    "use": { "heading": "5. 허용되는 사용", "intro": "다음 행위를 하지 않을 것에 동의합니다:", "items": ["불법적인 목적으로 서비스를 사용하는 것.", "서비스를 역공학, 악용 또는 방해하려는 시도.", "타인의 지적 재산권을 침해하는 콘텐츠 업로드.", "계정 액세스를 공유, 재판매 또는 재배포하는 것."] },
+    "ip": { "heading": "6. 지적 재산", "content": "Voca는 <b>MIT 라이선스</b>로 배포된 오픈 소스 소프트웨어입니다. 트랜스크립트와 번역을 포함하여 서비스를 사용하여 생성한 모든 콘텐츠의 소유권은 사용자에게 있습니다." },
+    "warranties": { "heading": "7. 보증 면책", "content": "서비스는 명시적이든 묵시적이든 어떠한 종류의 보증 없이 \"있는 그대로\" 제공됩니다. 트랜스크립션이나 번역의 정확성을 보장하지 않습니다." },
+    "liability": { "heading": "8. 책임 제한", "content": "법률이 허용하는 최대 범위 내에서, 서비스 사용으로 인한 간접적, 부수적, 특별, 결과적 또는 징벌적 손해에 대해 당사는 책임을 지지 않습니다." },
+    "termination": { "heading": "9. 종료", "content": "본 약관 위반 시 액세스를 중지하거나 종료할 수 있습니다. 언제든지 서비스 사용을 중단하고 구독을 취소할 수 있습니다." },
+    "changes": { "heading": "10. 약관 변경", "content": "본 약관은 수시로 업데이트될 수 있습니다. 변경 후 서비스를 계속 사용하면 업데이트된 약관에 동의한 것으로 간주됩니다." },
+    "contact": { "heading": "11. 문의", "content": "본 약관에 대해 질문이 있으시면 <email>contact@usevoca.dev</email>로 문의해 주세요." }
+  },
+  "privacy": {
+    "title": "개인정보 처리방침",
+    "lastUpdated": "최종 업데이트: 2026년 2월 26일",
+    "intro": { "heading": "1. 소개", "content": "본 개인정보 처리방침은 Emircan Sahin(\"당사\")이 운영하는 Voca(\"서비스\")가 사용자의 정보를 어떻게 수집, 사용 및 보호하는지 설명합니다." },
+    "collection": { "heading": "2. 수집하는 정보", "account": "<b>계정 정보:</b> Google로 로그인 시 이름, 이메일 주소, 프로필 사진을 수신합니다. 인증 목적으로만 사용됩니다.", "transcripts": "<b>트랜스크립트:</b> 변환된 텍스트와 번역은 앱 내에서 액세스할 수 있도록 저장됩니다.", "billing": "<b>결제 정보:</b> 결제 세부 정보는 당사의 공식 판매자인 <b>Paddle</b>이 전적으로 수집 및 처리합니다. 당사는 결제 카드 정보를 저장하거나 액세스하지 않습니다." },
+    "audio": { "heading": "3. 오디오 데이터", "items": ["오디오 파일은 트랜스크립션 후 <b>즉시 삭제</b>됩니다. 처리 시간 이후 녹음을 저장하지 않습니다.", "오디오는 트랜스크립션을 위해 음성-텍스트 변환 제공업체로 전송됩니다. 어떠한 사본도 보유하지 않습니다."] },
+    "privacyMode": { "heading": "4. 프라이버시 모드", "content": "Voca는 설정에서 선택적 프라이버시 모드를 제공합니다. 활성화하면 가장 최근 트랜스크립트만 유지됩니다 — 새 트랜스크립션마다 이전 것이 삭제됩니다. 활성화 시 기존 모든 트랜스크립트도 삭제됩니다." },
+    "thirdParty": { "heading": "5. 서드파티 서비스", "intro": "핵심 기능을 제공하기 위해 서드파티 서비스를 사용합니다. 사용자의 데이터는 해당 제공업체의 개인정보 처리방침에 따라 처리될 수 있습니다:", "paddle": "<b>Paddle</b> — 결제 처리. <paddlePrivacy>개인정보 처리방침</paddlePrivacy>", "google": "<b>Google</b> — 인증 및 번역. <googlePrivacy>개인정보 처리방침</googlePrivacy>" },
+    "noCollect": { "heading": "6. 수집하지 않는 정보", "items": ["분석이나 추적 없음.", "광고 식별자 없음.", "마케팅 목적의 데이터 판매 또는 공유 없음."] },
+    "retention": { "heading": "7. 데이터 보존", "items": ["<b>오디오:</b> 처리 후 즉시 삭제.", "<b>트랜스크립트:</b> 삭제하거나 프라이버시 모드가 제거할 때까지 저장.", "<b>계정:</b> 활성 상태인 동안 유지. 삭제 요청은 문의해 주세요."] },
+    "rights": { "heading": "8. 사용자의 권리", "intro": "다음 권리가 있습니다:", "items": ["앱을 통해 데이터에 액세스.", "트랜스크립트를 개별적으로 또는 프라이버시 모드를 통해 삭제.", "문의를 통해 계정의 완전한 삭제 요청.", "언제든지 구독 취소."] },
+    "children": { "heading": "9. 아동 개인정보 보호", "content": "서비스는 13세 미만의 아동을 대상으로 하지 않습니다. 아동의 개인정보를 의도적으로 수집하지 않습니다." },
+    "changes": { "heading": "10. 방침 변경", "content": "본 개인정보 처리방침은 수시로 업데이트될 수 있습니다. 변경 후 서비스를 계속 사용하면 업데이트된 방침에 동의한 것으로 간주됩니다." },
+    "contact": { "heading": "11. 문의", "content": "본 개인정보 처리방침에 대해 질문이 있으시면 <email>contact@usevoca.dev</email>로 문의해 주세요." }
   }
 }
